auth/0-dep-svc.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: kubis-gw
  lables:
    app: kubis-gw
spec:
  selector:
    app: kubis-gw
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: kubis-rest
  lables:
    app: kubis-rest
spec:
  selector:
    app: kubis-rest
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: kubis-rest-insec
  lables:
    app: kubis-rest-insec
spec:
  selector:
    app: kubis-rest-insec
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubis-gw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubis-gw
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: kubis-gw
        version: v0-1
    spec:
      containers:
      - name: kubis-gw
        image: "docker-registry.default.svc:5000/kubis/kubis-gw:0.3"
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubis-rest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubis-rest
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: kubis-rest
        version: v0-3
    spec:
      containers:
      - name: kubis-rest
        image: "docker-registry.default.svc:5000/kubis/kubis-rest:0.3.5"
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubis-rest-insec
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubis-rest-insec
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: kubis-rest-insec
        version: v0-3
    spec:
      containers:
      - name: kubis-rest
        image: "docker-registry.default.svc:5000/kubis/kubis-rest:0.3.5"
        ports:
        - containerPort: 8080
