auth/1-dep-rest-sec.yaml
kind: Service
apiVersion: v1
metadata:
  name: kubis-rest
  lables:
    app: kubis-rest
spec:
  selector:
    app: kubis-rest
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kubis-rest
spec:
  host: kubis-rest
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v0-3
    labels:
      version: v0-3
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kubis-rest
spec:
  hosts:
    - kubis-rest
  http:
  - route:
    - destination:
        host: kubis-rest
        subset: v0-3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubis-rest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubis-rest
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: kubis-rest
        version: v0-3
    spec:
      containers:
      - name: kubis-rest
        image: "docker-registry.default.svc:5000/kubis/kubis-rest:0.3.5"
        ports:
        - containerPort: 8080
